# backend-prm-admin

./: .gitignore  Cargo.toml
src/: main.rs
src/application/services/: character_service.rs  mod.rs
src/domain/models/: character.rs
src/domain/repositories/: character_repository.rs  mod.rs
src/infrastructure/persistence/: character_repository.rs
src/presentation/handlers/: character_handlers.rs  mod.rs
