[package]
name = "backend-prm-admin"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4"
sqlx = { version = "0.6", features = ["mysql", "runtime-tokio-native-tls", "time"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
async-trait = "0.1"
utoipa = { version = "2" }
utoipa-swagger-ui = { version = "2", features = ["actix-web"] }
dotenv = "0.15"
time = { version = "0.3", features = ["serde"] }
